🚸 Apply overflow: hidden to .sidebar  to prevent backward scrolling

--- a/styles/layouts/_sidebar.scss
+++ b/styles/layouts/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  position: absolute;
+  position: fixed;
   top: $top-header-sm-height;
   left: 0;
   width: 100%;
